Change case sensitive for icon image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="https://tiny.pl/tbnpj">Amet</a>
                 </nav>
                 <div id="menu">
-                    <img src="icon.jpg" />
+                    <img src="icon.JPG" />
                 </div>
             </header>
             <main>
